# zotgrep

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  PUBLISHING.md  README.md  main.py  pyproject.toml  requirements.txt  results.csv  setup.py  suggested_changes.md  temp.py  test_zotgrep.py  test_zotsearch.py  zotsearch.py
.github/workflows/: python-publish.yml  tutorial-pages.yml
Planing/: IMPLEMENTATION_SUMMARY.md  MODULARIZATION_PLAN.md  newmarkdownstructure.md
examples/: abs_43_filter.csv  abs_43_filter.env  abs_43_filter_to_env.py
research/: benchmark_fulltext_sources.py  results.json
tests/: __init__.py  test_config.py  test_pdf_processor.py  test_result_handler.py  test_search_engine.py  test_text_analyzer.py  test_web.py
tutorial/: zotgrep-tutorial.qmd
zotgrep/: __init__.py  cli.py  config.py  pdf_processor.py  result_handler.py  search_engine.py  text_analyzer.py  version.py  web.py
zotsearch/: __init__.py  cli.py  config.py  pdf_processor.py  result_handler.py  search_engine.py  text_analyzer.py  web.py
zotsearch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
