[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "zotgrep"
version = "2.1.0"
description = "Enhanced Zotero library and full-text PDF search"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "Francisco Wilhelm" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Researchers",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "flask>=3.0",
    "nltk>=3.9.1",
    "pypdfium2>=5.3.0",
    "pyzotero>=1.8.0",
    "PyYAML>=6.0.1",
]

[project.scripts]
zotgrep = "zotgrep.cli:main"

[tool.setuptools.packages.find]
include = ["zotgrep*"]
