[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "zotgrep"
version = "3.0.0"
description = "Enhanced Zotero library and full-text PDF search"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-only"
license-files = ["LICENSE", "NOTICE"]
authors = [
    { name = "Francisco Wilhelm" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Researchers",
    "Programming Language :: Python :: 3",
]
urls = { Homepage = "https://github.com/franciscowilhelm/zotgrep", Repository = "https://github.com/franciscowilhelm/zotgrep", Issues = "https://github.com/franciscowilhelm/zotgrep/issues" }
dependencies = [
    "flask>=3.0",
    "pysbd>=0.3.4",
    "pypdfium2>=5.3.0",
    "pyzotero>=1.8.0",
    "PyYAML>=6.0.1",
]

[project.scripts]
zotgrep = "zotgrep.cli:main"

[tool.setuptools.packages.find]
include = ["zotgrep*"]
